# planner

./: .gitignore  README.md  angular.json  package-lock.json  package.json
.github/workflows/: static.yml
doc/: 3rdpartylicenses.txt  index.html  main.2f8a35024de27334.js  main.4d52e5047d867264.js  main.f864362ae9497381.js  runtime.8411d4e8e5d2764f.js  styles.62b593b634b3523a.css
planner-be/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.alpine.amd64  Dockerfile.amd64  Dockerfile.azure  docker-build-alpine-amd64.sh  docker-build-alpine.sh  docker-build-amd64.sh  docker-build-azure.sh  docker-build.sh  docker-push.sh  docker.sh  planner.db
planner-be/migrations/2023-06-04-054534_init/: down.sql  up.sql
planner-be/migrations/2023-06-12-141346_init/: down.sql  up.sql
planner-be/src/: main.rs  schema.rs
planner-be/src/handler/: jwt.rs  mod.rs  sprint_handler.rs  task_handler.rs  user_handler.rs
planner-be/src/model/: entity.rs  mod.rs  param.rs  vo.rs
planner-be/src/repository/: mod.rs  sprint_repository.rs  task_repository.rs  user_repository.rs
planner-be/src/service/: task_service.rs
planner-fe/: .gitignore  angular.json  package-lock.json  package.json
planner-fe/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  common.ts
planner-fe/src/environments/: environment.ts
src/: index.html  index.prod.html
src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  common.ts
src/environments/: environment.prod.ts  environment.ts
(+24 files in other folders)
